enhance mutli-theading for load test + migrate to java 25